[gd_scene load_steps=13 format=2]

[ext_resource path="res://imported_assets/computer/Battlenet.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://imported_assets/computer/level1.png" type="Texture" id=2]
[ext_resource path="res://imported_assets/computer/level2.png" type="Texture" id=3]
[ext_resource path="res://imported_assets/computer/level3.png" type="Texture" id=4]
[ext_resource path="res://ActionLevels/Room/LevelSelect.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0588235, 0.12549, 0.807843, 1 )
border_width_top = 36
expand_margin_top = 32.0

[sub_resource type="Shader" id=6]
code = "shader_type spatial;
render_mode cull_front, unshaded;

uniform sampler2D outline_noise_tex;
uniform vec4 outline_color:hint_color;
uniform float scissor_value = 0.5;
uniform vec2 uv_scale = vec2(1.0);
uniform sampler2D falloff_curve;
uniform float outline_size = 0.1;
uniform float offset_fres = 0.3;
uniform float fps = 5.0;

varying float h;

void vertex(){
	VERTEX += NORMAL * outline_size * texture(outline_noise_tex, UV).r;
	h = (WORLD_MATRIX * vec4(VERTEX, 1.0)).y;
}

void fragment(){
	float fres = abs(dot(normalize(-NORMAL), normalize(VERTEX)));
	vec3 nor = normalize(NORMAL);
	float angle = atan(nor.y, nor.x);
	angle /= 3.14;
	
	float fres_remap = texture(falloff_curve, vec2(1.0 - fres)).r + offset_fres;
	ALPHA = texture(outline_noise_tex, vec2(angle * uv_scale.x + SCREEN_UV.x, nor.z * uv_scale.y + floor(TIME * fps)/fps)).r * fres_remap;
	ALBEDO = outline_color.rgb;
	ALPHA_SCISSOR = scissor_value;
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/outline_color = null
shader_param/scissor_value = 0.5
shader_param/uv_scale = Vector2( 1, 1 )
shader_param/outline_size = 0.1
shader_param/offset_fres = 0.3
shader_param/fps = 5.0

[sub_resource type="Shader" id=4]
code = "shader_type spatial;
render_mode cull_front, unshaded;

uniform sampler2D outline_noise_tex;
uniform vec4 outline_color:hint_color;
uniform float scissor_value = 0.5;
uniform vec2 uv_scale = vec2(1.0);
uniform sampler2D falloff_curve;
uniform float outline_size = 0.1;
uniform float offset_fres = 0.3;
uniform float fps = 5.0;

varying float h;

void vertex(){
	VERTEX += NORMAL * outline_size * texture(outline_noise_tex, UV).r;
	h = (WORLD_MATRIX * vec4(VERTEX, 1.0)).y;
}

void fragment(){
	float fres = abs(dot(normalize(-NORMAL), normalize(VERTEX)));
	vec3 nor = normalize(NORMAL);
	float angle = atan(nor.y, nor.x);
	angle /= 3.14;
	
	float fres_remap = texture(falloff_curve, vec2(1.0 - fres)).r + offset_fres;
	ALPHA = texture(outline_noise_tex, vec2(angle * uv_scale.x + SCREEN_UV.x, nor.z * uv_scale.y + floor(TIME * fps)/fps)).r * fres_remap;
	ALBEDO = outline_color.rgb;
	ALPHA_SCISSOR = scissor_value;
}"

[sub_resource type="ShaderMaterial" id=5]
next_pass = SubResource( 7 )
shader = SubResource( 4 )
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/scissor_value = 0.5
shader_param/uv_scale = Vector2( 1, 1 )
shader_param/outline_size = 0.1
shader_param/offset_fres = 0.3
shader_param/fps = 5.0

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="LevelSelect" type="WindowDialog"]
unique_name_in_owner = true
visible = true
anchor_left = 0.182292
anchor_top = 0.239815
anchor_right = 0.78125
anchor_bottom = 0.875
custom_fonts/title_font = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
window_title = "Worldwide Wack"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Level1" type="TextureRect" parent="."]
unique_name_in_owner = true
material = SubResource( 5 )
margin_left = 346.0
margin_top = 97.0
margin_right = 1839.0
margin_bottom = 896.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
expand = true

[node name="Level2" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 345.0
margin_top = 286.0
margin_right = 1838.0
margin_bottom = 1085.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
expand = true

[node name="Level3" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 346.0
margin_top = 476.0
margin_right = 1839.0
margin_bottom = 1275.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
expand = true

[node name="LevelLore" type="RichTextLabel" parent="."]
unique_name_in_owner = true
anchor_left = 0.645217
anchor_top = 0.163265
anchor_right = 0.86087
anchor_bottom = 0.925656
margin_left = -6.10352e-05
custom_fonts/normal_font = SubResource( 3 )
text = "Level details etc."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="gui_input" from="Level1" to="." method="_on_Level1_gui_input"]
[connection signal="mouse_entered" from="Level1" to="." method="_on_Level1_mouse_entered"]
[connection signal="gui_input" from="Level2" to="." method="_on_Level2_gui_input"]
[connection signal="mouse_entered" from="Level2" to="." method="_on_Level2_mouse_entered"]
[connection signal="gui_input" from="Level3" to="." method="_on_Level3_gui_input"]
[connection signal="mouse_entered" from="Level3" to="." method="_on_Level3_mouse_entered"]
